codegen/ui_tests/second_shared_ref.stderr
error: function parameters other than the first one cannot be passed by reference
  --> ui_tests/second_shared_ref.rs:13:41
   |
13 | pub fn test_fn(input: Clonable, factor: &bool) -> bool {
   |                                         ^
